--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Hello, World!</h1>
     <p>This is a sample HTML document.</p>
+    <a href="server.json">Download Server Configuration</a> <!-- Relativer Link zu server.json -->
 </body>
 </html>
