--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Hello, World!</h1>
     <p>This is a sample HTML document.</p>
     <a href="server.json">Download Server Configuration</a> <!-- Relativer Link zu server.json -->
+    <a href="https://blockhunter0007.github.io/cheathubdumpingground/Download">Download Server Configuration (Absolute URL)</a> <!-- Absoluter Link zu server.json -->
 </body>
 </html>
