--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         <header>
             <div class="logo">CheatHub</div>
             <div class="tagline">Premium Gaming Tools</div>
-            <div class="subtitle">Kostenlos • Sicher • Virenfrei</div>
+            <div class="subtitle">Kostenlos • Sicher • Virenfrei • Spendenfinanziert</div>
         </header>
 
         <div class="features">
