Update next will fix this update

--- a/index.html
+++ b/index.html
@@ -1307,7 +1307,7 @@
                         "size": "5.4 MB",
                         "description": "Präzise Zielhilfe mit geringer Auswirkung auf Performance.",
                         "screenshot": "assets/aimmaster.png",
-                        "download": "downloads/aimmaster_v2.1.0.zip",
+                        "download": "#",
                         "sha256": "abc123def456789012345678901234567890123456789012345678901234",
                         "virus_scan": {
                             "status": "clean",
@@ -1321,7 +1321,7 @@
                         "size": "3.2 MB",
                         "description": "Grafikoptimierungen und Überlagerungen.",
                         "screenshot": "assets/visualtune.png",
-                        "download": "downloads/visualtune_1.0.3.zip",
+                        "download": "#",
                         "sha256": "xyz789abc012345678901234567890123456789012345678901234567890",
                         "virus_scan": {
                             "status": "clean",
