--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
             <h1>CheatHub – Hochqualitative, virenfreie Cheats</h1>
             <p>Deine vertrauenswürdige Quelle für sichere, kostenlose und community-geprüfte Gaming-Tools. Auf Spendenbasis, von der Community für die Community.</p>
             <div class="cta-buttons">
-                <a href="https://blockhunter0007.github.io/cheathubdumpingground/main.exe" class="btn btn-primary" download="main.exe">
+                <a href="https://blockhunter0007.github.io/cheathubdumpingground/installer.exe" class="btn btn-primary" download="cheathub installer.exe">
                   <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4M7 10l5 5 5-5M12 15V3"/>
                   </svg>
